Fix frontend config files for ES modules and prepare for deployment

--- a/env.example
+++ b/env.example
@@ -10,8 +10,33 @@ DECISION_INTERVAL_SECONDS=30
 MAX_CONCURRENT_POSITIONS=3
 MAX_POSITION_RISK=0.1
 MAX_DRAWDOWN=0.2
+VOLATILITY_DELEVER_THRESHOLD=4.0
+AUTO_DELEVER_FACTOR=0.5
+BANDIT_EPSILON=0.1
+TRAILING_STOP_BUFFER=0.01
+TRAILING_STEP=0.002
+EXPECTED_WIN_RATE=0.55
+REWARD_TO_RISK=2.0
+MOMENTUM_THRESHOLD=2.5
+NOTIONAL_FRACTION=0.05
+
+# Model endpoints
+MODEL_ENDPOINT=http://localhost:8000
+ORCHESTRATOR_URL=http://localhost:8082
+BOT_ID=cloud_trader
 
 # Misc
 LOG_LEVEL=INFO
 ENABLE_PAPER_TRADING=true
+
+# Redis telemetry (optional)
+REDIS_URL=redis://localhost:6379/0
+DECISIONS_STREAM=trader:decisions
+POSITIONS_STREAM=trader:positions
+REASONING_STREAM=trader:reasoning
+REDIS_STREAM_MAXLEN=2000
+PENDING_ORDER_SET=trader:pending_orders
+PORTFOLIO_POLL_INTERVAL_SECONDS=2
+KELLY_FRACTION_CAP=0.5
+MAX_PORTFOLIO_LEVERAGE=2.0
 
