--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ __pycache__/
 
 # Distribution / packaging
 .Python
+node_modules/
+cloud-trader-dashboard/node_modules/
+cloud-trader-dashboard/dist/
 build/
 develop-eggs/
 dist/
