--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ aiohttp>=3.9.0
 pydantic>=2.5.0
 pydantic-settings>=2.1.0
 google-cloud-secret-manager>=2.16.0
+redis>=5.0.3
+httpx>=0.26.0
+orjson>=3.10.7
+prometheus-fastapi-instrumentator>=6.0.0
