--- a/infra/llm_serving/Dockerfile.qwen
+++ b/infra/llm_serving/Dockerfile.qwen
@@ -8,7 +8,7 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
-COPY requirements-llm.txt .
+COPY infra/llm_serving/requirements-llm.txt .
 RUN pip install --no-cache-dir -r requirements-llm.txt
 
 # Runtime stage
