--- a/cloud-trader-dashboard/package.json
+++ b/cloud-trader-dashboard/package.json
@@ -14,6 +14,7 @@
     "lightweight-charts": "^5.0.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
     "recharts": "^3.3.0"
   },
   "devDependencies": {
