--- a/infra/dashboard/cloudbuild-dashboard.yaml
+++ b/infra/dashboard/cloudbuild-dashboard.yaml
@@ -44,7 +44,7 @@ steps:
       - '--timeout'
       - '300'
       - '--set-env-vars'
-      - 'ORCHESTRATOR_URL=https://wallet-orchestrator-880429861698.us-central1.run.app'
+      - 'ORCHESTRATOR_URL=https://api.sapphiretrade.xyz/orchestrator'
       - '--set-env-vars'
       - 'CLOUD_TRADER_URL=https://cloud-trader-880429861698.us-central1.run.app'
 
