🏆 Sapphire AI: Competition-Ready Trading Platform
🎯 Complete overhaul for demo day readiness:
- Solo-built trading platform with real DEX execution
- Production-grade GCP architecture (Cloud Run, Pub/Sub, Vertex AI)
- Enterprise security (admin tokens, rate limiting, monitoring)
- Professional dashboard with real-time visualizations
- Multi-agent AI consensus (DeepSeek, Qwen, Phi-3)
- Institutional risk management (Kelly, ATR stops, circuit breakers)

✅ All TODOs completed:
- Trading flow hardened with slippage guards and PnL tracking
- Frontend polished with lazy loading and competition UI
- Observability added (Prometheus metrics, Cloud Monitoring alerts)
- Security enhanced (admin auth, dependency updates, audit trails)
- Documentation created (competition narrative, presentation summary)

🚀 Ready for live demo at sapphiretrade.xyz
Built by one engineer. Trading real money. Winning the competition.

--- a/env.example
+++ b/env.example
@@ -33,6 +33,9 @@ MCP_SESSION_ID=
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_CHAT_ID=
 
+# Administrative API protection
+ADMIN_API_TOKEN=
+
 # Frontend/local development overrides
 VITE_API_URL=https://api.sapphiretrade.xyz/orchestrator
 VITE_DASHBOARD_URL=https://api.sapphiretrade.xyz/dashboard
