--- a/infra/dashboard/cloudbuild-dashboard.yaml
+++ b/infra/dashboard/cloudbuild-dashboard.yaml
@@ -49,6 +49,8 @@ steps:
       - 'CLOUD_TRADER_URL=https://cloud-trader-880429861698.us-central1.run.app'
 
 options:
+  machineType: E2_HIGHCPU_32
+  diskSizeGb: 200
   logging: CLOUD_LOGGING_ONLY
 
 timeout: '1800s'
