--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
-fastapi>=0.115.0
-uvicorn[standard]>=0.30.0
-aiohttp>=3.13.2
+fastapi>=0.115.5
+uvicorn[standard]>=0.30.4
+aiohttp>=3.11.10
 pydantic>=2.12.3
-pydantic-settings>=2.11.0
-google-cloud-secret-manager>=2.25.0
-redis>=5.0.4
+pydantic-settings>=2.11.1
+google-cloud-secret-manager>=2.25.2
+google-cloud-pubsub>=2.19.0
+redis>=5.1.1
 httpx>=0.28.1
 orjson>=3.11.4
 prometheus-fastapi-instrumentator>=7.1.0
 structlog>=25.5.0
-python-telegram-bot>=22.5
+python-telegram-bot>=22.8
 numpy>=2.3.4
 pandas>=2.3.3
 pandas-ta-openbb>=0.4.22
