--- a/risk-orchestrator/pyproject.toml
+++ b/risk-orchestrator/pyproject.toml
@@ -14,6 +14,7 @@ fastapi = "^0.115.0"
 uvicorn = {extras = ["standard"], version = "^0.30.0"}
 httpx = "^0.27.0"
 redis = {extras = ["hiredis"], version = "^5.0.0"}
+google-cloud-pubsub = ">=2.13.0"
 pydantic-settings = "^2.4.0"
 python-dotenv = "^1.0.0"
 loguru = "^0.7.0"
