Major system updates: Frontend auth removal, backend AI agents, infrastructure improvements
- Frontend: Removed authentication system (Login.tsx, AuthContext.tsx) for public access
- Backend: Added VPIN HFT agent, rate limiting, fallback strategies, enhanced Telegram bot
- Infrastructure: Updated K8s deployments, GKE node pools, monitoring, LLM serving
- AI: Integrated 4 core PvP agents (DeepSeek, FinGPT, LagLlama, Profit Maximizer)
- Testing: Added comprehensive testing framework and Gemini agent documentation
- Deployment: Updated Cloud Run, Firebase configs, and deployment scripts
- Monitoring: Enhanced Prometheus metrics, alerting, and observability
- Documentation: Added extensive deployment guides and troubleshooting docs

--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -33,6 +33,10 @@ spec:
           value: "WARNING"
         - name: MCP_ENABLED
           value: "true"
+        - name: CACHE_BACKEND
+          value: "redis"
+        - name: REDIS_URL
+          value: "redis://redis-service.trading.svc.cluster.local:6379"
         envFrom:
         - secretRef:
             name: cloud-trader-secrets
