--- a/trading-dashboard/.firebaserc
+++ b/trading-dashboard/.firebaserc
@@ -10,6 +10,6 @@
         ]
       }
     }
-  },
-  "etags": {}
+  }
 }
+EOF && echo "✅ Firebase config ready" && echo "" && echo "🚀 DEPLOYING FRONTEND TO TEMPORARY SITE:" && cd trading-dashboard && firebase hosting:sites:create temp-trading-dashboard --project=sapphireinfinite 2>/dev/null || echo "Site may already exist or creation not needed"
