Fix PATH variable conflict in Cloud Build
- Avoid using PATH variable which conflicts with Cloud Build substitutions
- Set PATH explicitly to include gcloud SDK path

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -110,7 +110,7 @@ steps:
         # Install gcloud
         echo "📦 Installing gcloud..."
         curl -sSL https://sdk.cloud.google.com | bash > /dev/null 2>&1
-        export PATH=$PATH:/root/google-cloud-sdk/bin
+        export PATH=/root/google-cloud-sdk/bin:/usr/local/bin:/usr/bin:/bin
 
         # Install Helm
         echo "📦 Installing Helm..."
