--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -150,7 +150,7 @@ steps:
             --namespace trading \
             --create-namespace \
             --wait \
-            --timeout=600s \
+                    --timeout=300s \
             --set global.imageRegistry=us-central1-docker.pkg.dev \
             --set global.projectId=${PROJECT_ID} \
             --set cloudTrader.image.tag=${BUILD_ID} \
@@ -159,7 +159,7 @@ steps:
                 --namespace trading \
                 --create-namespace \
                 --wait \
-                --timeout=600s \
+                    --timeout=300s \
                 --set global.imageRegistry=us-central1-docker.pkg.dev \
                 --set global.projectId=${PROJECT_ID} \
                 --set cloudTrader.image.tag=${BUILD_ID}
@@ -172,11 +172,11 @@ steps:
         # Helm chart handles all image updates automatically
 
         echo "⏳ Waiting for optimized rollouts to complete..."
-        # Rollout with error handling - check all deployments from Helm chart
-        deployments="trading-system-cloud-trader trading-system-mcp-coordinator trading-system-deepseek-bot trading-system-qwen-bot trading-system-fingpt-bot trading-system-lagllama-bot trading-system-vpin-bot"
+                # Rollout with error handling - check all deployments from Helm chart
+                deployments="trading-system-cloud-trader trading-system-mcp-coordinator trading-system-deepseek-bot trading-system-qwen-bot trading-system-fingpt-bot trading-system-lagllama-bot trading-system-vpin-bot"
 
-        for deployment in $deployments; do
-          if ! kubectl -n trading rollout status deployment/$deployment --timeout=300s; then
+                for deployment in $deployments; do
+                  if ! kubectl -n trading rollout status deployment/$deployment --timeout=180s; then
               echo "❌ $deployment rollout failed"
               kubectl -n trading describe deployment/$deployment
               kubectl -n trading logs deployment/$deployment --tail=50 || true
@@ -236,4 +236,4 @@ options:
     - 'PYTHONOPTIMIZE=1'
 
 # Conservative timeout for reliability
-timeout: '1800s'  # 30 minutes should be sufficient
+timeout: '1200s'  # 20 minutes should be sufficient for CPU-only deployment
