--- a/helm/trading-system/templates/deployment-agent.yaml
+++ b/helm/trading-system/templates/deployment-agent.yaml
@@ -29,6 +29,7 @@ spec:
       securityContext:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- if $.Values.gpu.enabled }}
       {{- with $.Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
@@ -36,6 +37,7 @@ spec:
       {{- with $.Values.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
+      {{- end }}
       {{- end }}
       serviceAccountName: {{ include "trading-system.serviceAccountName" $ }}
       containers:
